--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,7 @@
 # Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
-# Orchestrate or schedule a set of jobs
-workflows:
-  build:
+jobs:
+  build_docker:
     steps:
       - setup_remote_docker
       - run: docker build -t bairdj/ambstat:$CIRCLE_BRANCH
