--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ jobs:
   build_docker:
     machine: true
     steps:
-      - run: docker build -t bairdj/ambstat:$CIRCLE_BRANCH
+      - run: docker build -t bairdj/ambstat:$CIRCLE_BRANCH .
 workflows:
   build:
     jobs:
