--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,7 @@ jobs:
   build_docker:
     machine: true
     steps:
+      - checkout
       - run: docker build -t bairdj/ambstat:$CIRCLE_BRANCH .
 workflows:
   build:
